--- a/GPURT.vcxproj
+++ b/GPURT.vcxproj
@@ -112,7 +112,7 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\Downloads\finalerender.png" />
+    <Image Include="finalerender.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
